<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/cloudy_apple"
    tools:context=".ProfileActivity"
    android:theme="@style/AppTheme.AppBarOverlay">

    <androidx.appcompat.widget.Toolbar
        app:titleTextColor="@android:color/white"
        android:background="@color/colorPrimary"
        android:id="@+id/toolbar_next"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>


    <TextView
        android:id="@+id/profile_weight"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:layout_marginTop="44dp"
        android:background="@drawable/white_register"
        android:gravity="center"
        android:hint="@string/weight"
        android:textColor="@android:color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.797"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_email" />

    <ImageView
        android:id="@+id/Profile_pic"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="104dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_profile_pic" />

    <TextView
        android:id="@+id/profile_username"
        android:layout_width="300dp"
        android:layout_height="30dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/white_register"
        android:gravity="center"
        android:hint="@string/username"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@android:color/black"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Profile_pic" />

    <TextView
        android:id="@+id/profile_email"
        android:layout_width="300dp"
        android:layout_height="30dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/white_register"
        android:gravity="center"
        android:hint="@string/email"
        android:textColor="@android:color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_username" />

    <TextView
        android:id="@+id/profile_height"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:layout_marginTop="44dp"
        android:background="@drawable/white_register"
        android:gravity="center"
        android:hint="@string/height"
        android:textColor="@android:color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.205"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_email" />

    <TextView
        android:id="@+id/profile_bmi"
        android:layout_width="175dp"
        android:layout_height="30dp"
        android:layout_marginTop="108dp"
        android:background="@drawable/white_register"
        android:gravity="center"
        android:hint="BMI"
        android:textColor="@android:color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_email" />

    <Button
        android:id="@+id/btnprofile_update"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/btn_rounded"
        android:text="Edit Details"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_bmi" />

    <Button
        android:id="@+id/btnChng_pass"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:background="@drawable/btn_rounded"
        android:gravity="center"
        android:text="@string/change_password"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnprofile_update"
        app:layout_constraintVertical_bias="0.122" />

    <TextView
        android:id="@+id/tvusername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toTopOf="@+id/profile_username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Profile_pic"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/tvemail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toTopOf="@+id/profile_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_username"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/tvheight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/height"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toTopOf="@+id/profile_height"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.228"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_email"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/tvweight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/weight"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toTopOf="@+id/profile_weight"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.765"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_email"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/tvbmi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="BMI"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toTopOf="@+id/profile_bmi"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_email"
        app:layout_constraintVertical_bias="1.0" />


</androidx.constraintlayout.widget.ConstraintLayout>